Decursive 2.0 BETA 4 by Archarodim

Changes from Decursive 2.0 BETA 3 to 2.0 BETA 4

- Changed the minimum number of MUF per row to 1
- The 'Show Help' option also disable the handle tool-tip
- The focused unit won't be scanned if it's unfriendly (you won't see it in the MUFs nor in the live-list).


Changes from Decursive 2.0 BETA 2 to 2.0 BETA 3

- Fix the huge memory consumption of the scanning functions.
- Fix a problem with the macro that was not updated if the macro frame was opened.
- Fix some options in the menus that were not propagated correctly.
- Code optimization.
- Added a note in the readme.txt file about how to change the default key bound to the macro.

Changes from Decursive 2.0 BETA 1 to 2.0 BETA 2

- Fix Micro-Unit-Frames (MUFs) display: the first time you log on, the MUFs are displayed to a reachable place instead of the top left corner of your screen.
- Fix the LUA error message that occurred when you had all your macro spot used.
- The handle to move the MUFs (above the first MUF) now highlights when mouse-overred, a tooltip has been added.
- Fix a huge bug in the priority and skip list management causing a variable number of unit to not be displayed in the MUFs if your lists were not empty.
- MUFs scaling functions have been improved.
- The readme.txt file has been updated.


Changes from Decursive 1.9.8.4 to 2.0 BETA 1

User significant changes:

- Debuff removal capability restored in several ways:
	- By clicking on-micro unit frames created by Decursive for a user-defined number of players.
        - By mouse-overring units or unit frames and pushing a user-defined keyboard key.
	- Read the readme file to know more about these changes
- Priority list management:
 	- Now fully operational, you can very easily change player positions in the list
	- List display has been very improved (scrollbars, colors...)
	- Priority list order defines the order of the micro-unit frames displayed
- The option window has been removed: