@@ -255,6 +255,11 @@ L:RegisterTranslations("zhCN", function() return {
 
     [Dcr.LOC.HANDLEHELP] = Dcr.LOC.HANDLEHELP,
 
+    [Dcr.LOC.MACROKEYALREADYMAPPED] = Dcr.LOC.MACROKEYALREADYMAPPED,
+    [Dcr.LOC.MACROKEYMAPPINGSUCCESS] = Dcr.LOC.MACROKEYMAPPINGSUCCESS,
+    [Dcr.LOC.MACROKEYMAPPINGFAILED] = Dcr.LOC.MACROKEYMAPPINGFAILED,
+    [Dcr.LOC.MACROKEYNOTMAPPED] = Dcr.LOC.MACROKEYNOTMAPPED,
+
 } end);
 
 -- // }}}
