@@ -247,6 +247,11 @@ L:RegisterTranslations("frFR", function() return {
 
     [Dcr.LOC.HANDLEHELP] = "Déplacer tous les micro-portraits",
 
+    [Dcr.LOC.MACROKEYALREADYMAPPED] = Dcr.LOC.MACROKEYALREADYMAPPED,
+    [Dcr.LOC.MACROKEYMAPPINGSUCCESS] = Dcr.LOC.MACROKEYMAPPINGSUCCESS,
+    [Dcr.LOC.MACROKEYMAPPINGFAILED] = Dcr.LOC.MACROKEYMAPPINGFAILED,
+    [Dcr.LOC.MACROKEYNOTMAPPED] = Dcr.LOC.MACROKEYNOTMAPPED,
+
 
 } end);
 
